@@ -1,3 +1,8 @@
+2010-03-16  Jb Evain  <jbevain@novell.com>
+
+	* runtime/Makefile.am, build-mingw32.sh: rename
+	the net_2_1 profile to moonlight.
+
 2010-03-10  Andrew Jorgensen  <ajorgensen@novell.com>
 
 	* configure.in: configure eglib even when we are not building
